# TaDS_Lab2_Dict

./: CMakeLists.txt  README.md  itog.txt
src/: main.cpp
src/BinTree/: BinTree.cpp  BinTree.h  Node.cpp  Node.h
src/Menu/: Menu.cpp  Menu.h  MenuItem.cpp  MenuItem.h  MyMenu.cpp  MyMenu.h
